--- a/PDFParser/PDFParser.vcxproj.filters
+++ b/PDFParser/PDFParser.vcxproj.filters
@@ -44,6 +44,9 @@
     <ClCompile Include="PDFParser.parser.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="PDFParser.error_types.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="app.rc">
@@ -54,10 +57,5 @@
     <Image Include="app.ico">
       <Filter>リソース ファイル</Filter>
     </Image>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="PDFParser.error_types.cpp">
-      <Filter>ソース ファイル</Filter>
-    </None>
   </ItemGroup>
 </Project>
