change require_test to always istr.clear() when returning function, and then test passed

--- a/test/UnitTest/PDFParserTest/PDFParserTest.vcxproj
+++ b/test/UnitTest/PDFParserTest/PDFParserTest.vcxproj
@@ -129,6 +129,7 @@
     <None Include="data\helloworld.pdf" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ignore_if_present_test.hpp" />
     <ClInclude Include="parser_test.hpp" />
     <ClInclude Include="require_test.hpp" />
     <ClInclude Include="seek_forward_head_of_line_test.hpp" />
