s/remove_reference_t/decay_t 読み込んだPDFのクロスリファレンステーブルの表示機能を追加

--- a/PDFReaderModel/PDFReaderModel.fsproj
+++ b/PDFReaderModel/PDFReaderModel.fsproj
@@ -2,10 +2,19 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
     <Compile Include="MainWindowViewModel.fs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="WinCopies.WindowsAPICodePack.Shell" Version="2.5.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\PDFParser\PDFParser.vcxproj" />
   </ItemGroup>
 
 </Project>
