設計の反映(ヘッダファイル、テストのみ)

--- a/PDFParser/PDFParser.vcxproj.filters
+++ b/PDFParser/PDFParser.vcxproj.filters
@@ -36,6 +36,15 @@
     <ClInclude Include="PDFParser.xref_types.h">
       <Filter>ヘッダー ファイル\PDFParser</Filter>
     </ClInclude>
+    <ClInclude Include="PDFParser.stream_parser.h">
+      <Filter>ヘッダー ファイル\PDFParser</Filter>
+    </ClInclude>
+    <ClInclude Include="PDFParser.object_types.h">
+      <Filter>ヘッダー ファイル\PDFParser</Filter>
+    </ClInclude>
+    <ClInclude Include="PDFParser.object_pool.h">
+      <Filter>ヘッダー ファイル\PDFParser</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AssemblyInfo.cpp">
