--- a/test/UnitTest/PDFParserTest/PDFParserTest.vcxproj.filters
+++ b/test/UnitTest/PDFParserTest/PDFParserTest.vcxproj.filters
@@ -154,37 +154,37 @@
     <ClCompile Include="tell_test.cpp">
       <Filter>ソース ファイル\stream_parser</Filter>
     </ClCompile>
-    <ClCompile Include="take_any_object_test%40stream_object.cpp">
+    <ClCompile Include="take_any_object%40stream_object_test.cpp">
       <Filter>ソース ファイル\stream_parser\take_any_object</Filter>
     </ClCompile>
-    <ClCompile Include="take_any_object_test%40array_object.cpp">
+    <ClCompile Include="take_any_object%40array_object_test.cpp">
       <Filter>ソース ファイル\stream_parser\take_any_object</Filter>
     </ClCompile>
-    <ClCompile Include="take_any_object_test%40boolean.cpp">
+    <ClCompile Include="take_any_object%40boolean_test.cpp">
       <Filter>ソース ファイル\stream_parser\take_any_object</Filter>
     </ClCompile>
-    <ClCompile Include="take_any_object_test%40dictionary_object.cpp">
+    <ClCompile Include="take_any_object%40dictionary_object_test.cpp">
       <Filter>ソース ファイル\stream_parser\take_any_object</Filter>
     </ClCompile>
-    <ClCompile Include="take_any_object_test%40hexadecimal_string.cpp">
+    <ClCompile Include="take_any_object%40hexadecimal_string_test.cpp">
       <Filter>ソース ファイル\stream_parser\take_any_object</Filter>
     </ClCompile>
-    <ClCompile Include="take_any_object_test%40indirect_reference.cpp">
+    <ClCompile Include="take_any_object%40indirect_reference_test.cpp">
       <Filter>ソース ファイル\stream_parser\take_any_object</Filter>
     </ClCompile>
-    <ClCompile Include="take_any_object_test%40integer_object.cpp">
+    <ClCompile Include="take_any_object%40integer_object_test.cpp">
       <Filter>ソース ファイル\stream_parser\take_any_object</Filter>
     </ClCompile>
-    <ClCompile Include="take_any_object_test%40literal_string.cpp">
+    <ClCompile Include="take_any_object%40literal_string_test.cpp">
       <Filter>ソース ファイル\stream_parser\take_any_object</Filter>
     </ClCompile>
-    <ClCompile Include="take_any_object_test%40name_object.cpp">
+    <ClCompile Include="take_any_object%40name_object_test.cpp">
       <Filter>ソース ファイル\stream_parser\take_any_object</Filter>
     </ClCompile>
-    <ClCompile Include="take_any_object_test%40null_object.cpp">
+    <ClCompile Include="take_any_object%40null_object_test.cpp">
       <Filter>ソース ファイル\stream_parser\take_any_object</Filter>
     </ClCompile>
-    <ClCompile Include="take_any_object_test%40real_object.cpp">
+    <ClCompile Include="take_any_object%40real_object_test.cpp">
       <Filter>ソース ファイル\stream_parser\take_any_object</Filter>
     </ClCompile>
   </ItemGroup>
