rename to indicate `test'

--- a/test/UnitTest/PDFParserTest/PDFParserTest.vcxproj
+++ b/test/UnitTest/PDFParserTest/PDFParserTest.vcxproj
@@ -132,17 +132,17 @@
     <ClInclude Include="seek_forward_head_of_line_test.hpp" />
     <ClInclude Include="seek_test.hpp" />
     <ClInclude Include="seek_to_end_test.hpp" />
-    <ClInclude Include="take_any_object%40array_object_test.hpp" />
-    <ClInclude Include="take_any_object%40boolean_object_test.hpp" />
-    <ClInclude Include="take_any_object%40dictionary_object_test.hpp" />
-    <ClInclude Include="take_any_object%40hexadecimal_string_test.hpp" />
-    <ClInclude Include="take_any_object%40indirect_reference_test.hpp" />
-    <ClInclude Include="take_any_object%40integer_object_test.hpp" />
-    <ClInclude Include="take_any_object%40literal_string_test.hpp" />
-    <ClInclude Include="take_any_object%40name_object_test.hpp" />
-    <ClInclude Include="take_any_object%40null_object_test.hpp" />
-    <ClInclude Include="take_any_object%40real_object_test.hpp" />
-    <ClInclude Include="take_any_object%40stream_object_test.hpp" />
+    <ClInclude Include="take_any_object_test%40array_object_test.hpp" />
+    <ClInclude Include="take_any_object_test%40boolean_object_test.hpp" />
+    <ClInclude Include="take_any_object_test%40dictionary_object_test.hpp" />
+    <ClInclude Include="take_any_object_test%40hexadecimal_string_test.hpp" />
+    <ClInclude Include="take_any_object_test%40indirect_reference_test.hpp" />
+    <ClInclude Include="take_any_object_test%40integer_object_test.hpp" />
+    <ClInclude Include="take_any_object_test%40literal_string_test.hpp" />
+    <ClInclude Include="take_any_object_test%40name_object_test.hpp" />
+    <ClInclude Include="take_any_object_test%40null_object_test.hpp" />
+    <ClInclude Include="take_any_object_test%40real_object_test.hpp" />
+    <ClInclude Include="take_any_object_test%40stream_object_test.hpp" />
     <ClInclude Include="take_indirect_object_test.hpp" />
     <ClInclude Include="take_signed_integer_test.hpp" />
     <ClInclude Include="take_trailer_test.hpp" />
@@ -159,17 +159,17 @@
     <ClCompile Include="seek_forward_head_of_line_test.cpp" />
     <ClCompile Include="seek_test.cpp" />
     <ClCompile Include="seek_to_end_test.cpp" />
-    <ClCompile Include="take_any_object%40array_object_test.cpp" />
-    <ClCompile Include="take_any_object%40boolean_test.cpp" />
-    <ClCompile Include="take_any_object%40dictionary_object_test.cpp" />
-    <ClCompile Include="take_any_object%40hexadecimal_string_test.cpp" />
-    <ClCompile Include="take_any_object%40indirect_reference_test.cpp" />
-    <ClCompile Include="take_any_object%40integer_object_test.cpp" />
-    <ClCompile Include="take_any_object%40literal_string_test.cpp" />
-    <ClCompile Include="take_any_object%40name_object_test.cpp" />
-    <ClCompile Include="take_any_object%40null_object_test.cpp" />
-    <ClCompile Include="take_any_object%40real_object_test.cpp" />
-    <ClCompile Include="take_any_object%40stream_object_test.cpp" />
+    <ClCompile Include="take_any_object_test%40array_object_test.cpp" />
+    <ClCompile Include="take_any_object_test%40boolean_test.cpp" />
+    <ClCompile Include="take_any_object_test%40dictionary_object_test.cpp" />
+    <ClCompile Include="take_any_object_test%40hexadecimal_string_test.cpp" />
+    <ClCompile Include="take_any_object_test%40indirect_reference_test.cpp" />
+    <ClCompile Include="take_any_object_test%40integer_object_test.cpp" />
+    <ClCompile Include="take_any_object_test%40literal_string_test.cpp" />
+    <ClCompile Include="take_any_object_test%40name_object_test.cpp" />
+    <ClCompile Include="take_any_object_test%40null_object_test.cpp" />
+    <ClCompile Include="take_any_object_test%40real_object_test.cpp" />
+    <ClCompile Include="take_any_object_test%40stream_object_test.cpp" />
     <ClCompile Include="take_indirect_object_test.cpp" />
     <ClCompile Include="take_signed_integer_test.cpp" />
     <ClCompile Include="take_trailer_test.cpp" />
