--- a/test/UnitTest/PDFParserTest/PDFParserTest.vcxproj.filters
+++ b/test/UnitTest/PDFParserTest/PDFParserTest.vcxproj.filters
@@ -113,6 +113,9 @@
     <ClInclude Include="take_any_object_test%40eof_test.hpp">
       <Filter>ヘッダー ファイル\stream_parser\take_any_object</Filter>
     </ClInclude>
+    <ClInclude Include="take_any_object_test%40unknown_test.hpp">
+      <Filter>ヘッダー ファイル\stream_parser\take_any_object</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="tests.cpp">
@@ -191,6 +194,9 @@
       <Filter>ソース ファイル\stream_parser\take_any_object_test</Filter>
     </ClCompile>
     <ClCompile Include="take_any_object_test%40eof_test.cpp">
+      <Filter>ソース ファイル\stream_parser\take_any_object_test</Filter>
+    </ClCompile>
+    <ClCompile Include="take_any_object_test%40unknown_test.cpp">
       <Filter>ソース ファイル\stream_parser\take_any_object_test</Filter>
     </ClCompile>
   </ItemGroup>
