--- a/test/UnitTest/PDFParserTest/PDFParserTest.vcxproj
+++ b/test/UnitTest/PDFParserTest/PDFParserTest.vcxproj
@@ -127,6 +127,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ignore_if_present_test.hpp" />
+    <ClInclude Include="literal_trim.hpp" />
     <ClInclude Include="parser_test.hpp" />
     <ClInclude Include="require_test.hpp" />
     <ClInclude Include="seek_forward_head_of_line_test.hpp" />
@@ -156,6 +157,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ignore_if_present_test.cpp" />
+    <ClCompile Include="literal_trim.cpp" />
     <ClCompile Include="parser_test.cpp" />
     <ClCompile Include="require_test.cpp" />
     <ClCompile Include="seek_forward_head_of_line_test.cpp" />
