--- a/PDFParser/PDFParser.vcxproj
+++ b/PDFParser/PDFParser.vcxproj
@@ -148,6 +148,9 @@
   <ItemGroup>
     <Image Include="app.ico" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="PDFParser.object_types.cpp" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
