--- a/PDFParser/PDFParser.vcxproj.filters
+++ b/PDFParser/PDFParser.vcxproj.filters
@@ -70,4 +70,9 @@
       <Filter>リソース ファイル</Filter>
     </Image>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="PDFParser.object_types.cpp">
+      <Filter>ソース ファイル\PDFParser</Filter>
+    </None>
+  </ItemGroup>
 </Project>
