--- a/PDFParser/PDFParser.vcxproj.filters
+++ b/PDFParser/PDFParser.vcxproj.filters
@@ -59,6 +59,9 @@
     <ClCompile Include="PDFParser.xref_types.cpp">
       <Filter>ソース ファイル\PDFParser</Filter>
     </ClCompile>
+    <ClCompile Include="PDFParser.object_types.cpp">
+      <Filter>ソース ファイル\PDFParser</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="app.rc">
@@ -69,10 +72,5 @@
     <Image Include="app.ico">
       <Filter>リソース ファイル</Filter>
     </Image>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="PDFParser.object_types.cpp">
-      <Filter>ソース ファイル\PDFParser</Filter>
-    </None>
   </ItemGroup>
 </Project>
