--- a/test/UnitTest/PDFParserTest/PDFParserTest.vcxproj
+++ b/test/UnitTest/PDFParserTest/PDFParserTest.vcxproj
@@ -127,30 +127,36 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="attempt_test.hpp" />
+    <ClInclude Include="attempt_token_test.hpp" />
+    <ClInclude Include="eof_test.hpp" />
+    <ClInclude Include="get_test.hpp" />
     <ClInclude Include="ignore_if_present_test.hpp" />
     <ClInclude Include="literal_trim.hpp" />
+    <ClInclude Include="operator++_test.hpp" />
     <ClInclude Include="parser_test.hpp" />
+    <ClInclude Include="no_token.hpp" />
+    <ClInclude Include="peek_test.hpp" />
+    <ClInclude Include="promise_test.hpp" />
+    <ClInclude Include="promise_token_test.hpp" />
     <ClInclude Include="seek_forward_head_of_line_test.hpp" />
     <ClInclude Include="seek_test.hpp" />
     <ClInclude Include="seek_to_end_test.hpp" />
-    <ClInclude Include="take_any_object_test%40array_object_test.hpp" />
-    <ClInclude Include="take_any_object_test%40boolean_object_test.hpp" />
-    <ClInclude Include="take_any_object_test%40dictionary_object_test.hpp" />
-    <ClInclude Include="take_any_object_test%40eof_test.hpp" />
-    <ClInclude Include="take_any_object_test%40hexadecimal_string_test.hpp" />
-    <ClInclude Include="take_any_object_test%40indirect_reference_test.hpp" />
-    <ClInclude Include="take_any_object_test%40integer_object_test.hpp" />
-    <ClInclude Include="take_any_object_test%40literal_string_test.hpp" />
-    <ClInclude Include="take_any_object_test%40name_object_test.hpp" />
-    <ClInclude Include="take_any_object_test%40null_object_test.hpp" />
-    <ClInclude Include="take_any_object_test%40real_object_test.hpp" />
-    <ClInclude Include="take_any_object_test%40stream_object_test.hpp" />
-    <ClInclude Include="take_any_object_test%40unknown_test.hpp" />
+    <ClInclude Include="take_array_object_test.hpp" />
+    <ClInclude Include="take_boolean_object_test.hpp" />
+    <ClInclude Include="take_dictionary_object_test.hpp" />
+    <ClInclude Include="take_hexadecimal_string_test.hpp" />
+    <ClInclude Include="take_indirect_reference_test.hpp" />
+    <ClInclude Include="take_integer_object_test.hpp" />
+    <ClInclude Include="take_literal_string_test.hpp" />
+    <ClInclude Include="take_name_object_test.hpp" />
+    <ClInclude Include="take_null_object_test.hpp" />
+    <ClInclude Include="take_real_object_test.hpp" />
+    <ClInclude Include="take_stream_object_test.hpp" />
+    <ClInclude Include="take_object_test.hpp" />
     <ClInclude Include="take_footer_test.hpp" />
     <ClInclude Include="take_indirect_object_test.hpp" />
-    <ClInclude Include="take_signed_integer_test.hpp" />
+    <ClInclude Include="take_token_test.hpp" />
     <ClInclude Include="take_trailer_test.hpp" />
-    <ClInclude Include="take_unsigned_integer_test.hpp" />
     <ClInclude Include="take_xref_entry_test.hpp" />
     <ClInclude Include="take_xref_table_test.hpp" />
     <ClInclude Include="tell_test.hpp" />
@@ -158,31 +164,32 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="attempt_test.cpp" />
+    <ClCompile Include="attempt_token_test.cpp" />
+    <ClCompile Include="eof_test.cpp" />
     <ClCompile Include="ignore_if_present_test.cpp" />
     <ClCompile Include="literal_trim.cpp" />
     <ClCompile Include="parser_test.cpp" />
+    <ClCompile Include="peek_test.cpp" />
+    <ClCompile Include="promise_token_test.cpp" />
     <ClCompile Include="seek_forward_head_of_line_test.cpp" />
     <ClCompile Include="seek_test.cpp" />
     <ClCompile Include="seek_to_end_test.cpp" />
-    <ClCompile Include="take_any_object_test%40array_object_test.cpp" />
-    <ClCompile Include="take_any_object_test%40boolean_test.cpp" />
-    <ClCompile Include="take_any_object_test%40dictionary_object_test.cpp" />
-    <ClCompile Include="take_any_object_test%40eof_test.cpp" />
-    <ClCompile Include="take_any_object_test%40hexadecimal_string_test.cpp" />
-    <ClCompile Include="take_any_object_test%40indirect_reference_test.cpp" />
-    <ClCompile Include="take_any_object_test%40integer_object_test.cpp" />
-    <ClCompile Include="take_any_object_test%40literal_string_test.cpp" />
-    <ClCompile Include="take_any_object_test%40name_object_test.cpp" />
-    <ClCompile Include="take_any_object_test%40null_object_test.cpp" />
-    <ClCompile Include="take_any_object_test%40real_object_test.cpp" />
-    <ClCompile Include="take_any_object_test%40stream_object_test.cpp" />
-    <ClCompile Include="take_any_object_test%40unknown_test.cpp" />
+    <ClCompile Include="take_array_object_test.cpp" />
+    <ClCompile Include="take_boolean_object_test.cpp" />
+    <ClCompile Include="take_dictionary_object_test.cpp" />
+    <ClCompile Include="take_hexadecimal_string_test.cpp" />
+    <ClCompile Include="take_indirect_reference_test.cpp" />
+    <ClCompile Include="take_integer_object_test.cpp" />
+    <ClCompile Include="take_literal_string_test.cpp" />
+    <ClCompile Include="take_name_object_test.cpp" />
+    <ClCompile Include="take_null_object_test.cpp" />
+    <ClCompile Include="take_real_object_test.cpp" />
+    <ClCompile Include="take_stream_object_test.cpp" />
+    <ClCompile Include="take_object_test.cpp" />
     <ClCompile Include="take_footer_test.cpp" />
     <ClCompile Include="take_indirect_object_test.cpp" />
-    <ClCompile Include="take_signed_integer_test.cpp" />
+    <ClCompile Include="take_token_test.cpp" />
     <ClCompile Include="take_trailer_test.cpp" />
-    <ClCompile Include="take_unsigned_integer_test.cpp" />
-    <ClCompile Include="take_xref_entry_test.cpp" />
     <ClCompile Include="take_xref_table_test.cpp" />
     <ClCompile Include="tell_test.cpp" />
     <ClCompile Include="tests.cpp" />
