--- a/test/UnitTest/PDFParserTest/PDFParserTest.vcxproj.filters
+++ b/test/UnitTest/PDFParserTest/PDFParserTest.vcxproj.filters
@@ -1,215 +1,230 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="ソース ファイル">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
-    </Filter>
-    <Filter Include="ヘッダー ファイル">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;h++;hm;inl;inc;ipp;xsd</Extensions>
-    </Filter>
-    <Filter Include="リソース ファイル">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
-    </Filter>
-    <Filter Include="テストケース">
+    <Filter Include="テストファイル">
       <UniqueIdentifier>{fb13a780-bf50-49a0-824b-f7b7c487b724}</UniqueIdentifier>
     </Filter>
-    <Filter Include="ヘッダー ファイル\stream_parser">
-      <UniqueIdentifier>{7454a9ba-2f9c-460e-a8a0-cf7559bb9c28}</UniqueIdentifier>
+    <Filter Include="pdfparser">
+      <UniqueIdentifier>{b3aa4caf-52d7-40ee-85e3-1e273637d7ab}</UniqueIdentifier>
     </Filter>
-    <Filter Include="ヘッダー ファイル\stream_parser\take_any_object">
-      <UniqueIdentifier>{cd05d257-c62b-485a-a4be-cd0c9b688bc1}</UniqueIdentifier>
+    <Filter Include="pdfparser\istream_extended">
+      <UniqueIdentifier>{2a7075ac-ee99-4c07-a8d2-65e4264a72f5}</UniqueIdentifier>
     </Filter>
-    <Filter Include="ソース ファイル\stream_parser">
+    <Filter Include="pdfparser\stream_parser">
       <UniqueIdentifier>{97fb2060-1ae8-4730-8c4d-a3c0600aa7f8}</UniqueIdentifier>
     </Filter>
-    <Filter Include="ソース ファイル\stream_parser\take_any_object_test">
+    <Filter Include="pdfparser_test">
+      <UniqueIdentifier>{05e8c806-ba24-41ef-9f1f-7bc90e9a70f7}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="pdfparser\tokenizer">
+      <UniqueIdentifier>{5fc1d187-fa9e-4889-81bc-6e8b85845a45}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="pdfparser\stream_parser\take_object_test">
       <UniqueIdentifier>{9a6b326c-6d91-49d5-815c-0b29f7c2131e}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
     <None Include="data\helloworld.pdf">
-      <Filter>テストケース</Filter>
+      <Filter>テストファイル</Filter>
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="parser_test.hpp">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="testtool.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="take_any_object_test%40array_object_test.hpp">
-      <Filter>ヘッダー ファイル\stream_parser\take_any_object</Filter>
-    </ClInclude>
-    <ClInclude Include="take_any_object_test%40boolean_object_test.hpp">
-      <Filter>ヘッダー ファイル\stream_parser\take_any_object</Filter>
-    </ClInclude>
-    <ClInclude Include="take_any_object_test%40literal_string_test.hpp">
-      <Filter>ヘッダー ファイル\stream_parser\take_any_object</Filter>
-    </ClInclude>
-    <ClInclude Include="take_any_object_test%40name_object_test.hpp">
-      <Filter>ヘッダー ファイル\stream_parser\take_any_object</Filter>
-    </ClInclude>
-    <ClInclude Include="ignore_if_present_test.hpp">
-      <Filter>ヘッダー ファイル\stream_parser</Filter>
-    </ClInclude>
-    <ClInclude Include="seek_forward_head_of_line_test.hpp">
-      <Filter>ヘッダー ファイル\stream_parser</Filter>
-    </ClInclude>
-    <ClInclude Include="seek_test.hpp">
-      <Filter>ヘッダー ファイル\stream_parser</Filter>
-    </ClInclude>
-    <ClInclude Include="seek_to_end_test.hpp">
-      <Filter>ヘッダー ファイル\stream_parser</Filter>
+    <ClInclude Include="take_footer_test.hpp">
+      <Filter>pdfparser\stream_parser</Filter>
     </ClInclude>
     <ClInclude Include="take_indirect_object_test.hpp">
-      <Filter>ヘッダー ファイル\stream_parser</Filter>
-    </ClInclude>
-    <ClInclude Include="take_signed_integer_test.hpp">
-      <Filter>ヘッダー ファイル\stream_parser</Filter>
+      <Filter>pdfparser\stream_parser</Filter>
     </ClInclude>
     <ClInclude Include="take_trailer_test.hpp">
-      <Filter>ヘッダー ファイル\stream_parser</Filter>
-    </ClInclude>
-    <ClInclude Include="take_unsigned_integer_test.hpp">
-      <Filter>ヘッダー ファイル\stream_parser</Filter>
+      <Filter>pdfparser\stream_parser</Filter>
     </ClInclude>
     <ClInclude Include="take_xref_entry_test.hpp">
-      <Filter>ヘッダー ファイル\stream_parser</Filter>
+      <Filter>pdfparser\stream_parser</Filter>
     </ClInclude>
     <ClInclude Include="take_xref_table_test.hpp">
-      <Filter>ヘッダー ファイル\stream_parser</Filter>
+      <Filter>pdfparser\stream_parser</Filter>
     </ClInclude>
-    <ClInclude Include="tell_test.hpp">
-      <Filter>ヘッダー ファイル\stream_parser</Filter>
+    <ClInclude Include="take_array_object_test.hpp">
+      <Filter>pdfparser\stream_parser\take_object_test</Filter>
     </ClInclude>
-    <ClInclude Include="take_any_object_test%40dictionary_object_test.hpp">
-      <Filter>ヘッダー ファイル\stream_parser\take_any_object</Filter>
+    <ClInclude Include="take_boolean_object_test.hpp">
+      <Filter>pdfparser\stream_parser\take_object_test</Filter>
     </ClInclude>
-    <ClInclude Include="take_any_object_test%40stream_object_test.hpp">
-      <Filter>ヘッダー ファイル\stream_parser\take_any_object</Filter>
+    <ClInclude Include="take_dictionary_object_test.hpp">
+      <Filter>pdfparser\stream_parser\take_object_test</Filter>
     </ClInclude>
-    <ClInclude Include="take_any_object_test%40hexadecimal_string_test.hpp">
-      <Filter>ヘッダー ファイル\stream_parser\take_any_object</Filter>
+    <ClInclude Include="take_hexadecimal_string_test.hpp">
+      <Filter>pdfparser\stream_parser\take_object_test</Filter>
     </ClInclude>
-    <ClInclude Include="take_any_object_test%40null_object_test.hpp">
-      <Filter>ヘッダー ファイル\stream_parser\take_any_object</Filter>
+    <ClInclude Include="take_indirect_reference_test.hpp">
+      <Filter>pdfparser\stream_parser\take_object_test</Filter>
     </ClInclude>
-    <ClInclude Include="take_any_object_test%40indirect_reference_test.hpp">
-      <Filter>ヘッダー ファイル\stream_parser\take_any_object</Filter>
+    <ClInclude Include="take_integer_object_test.hpp">
+      <Filter>pdfparser\stream_parser\take_object_test</Filter>
     </ClInclude>
-    <ClInclude Include="take_any_object_test%40integer_object_test.hpp">
-      <Filter>ヘッダー ファイル\stream_parser\take_any_object</Filter>
+    <ClInclude Include="take_literal_string_test.hpp">
+      <Filter>pdfparser\stream_parser\take_object_test</Filter>
     </ClInclude>
-    <ClInclude Include="take_any_object_test%40real_object_test.hpp">
-      <Filter>ヘッダー ファイル\stream_parser\take_any_object</Filter>
+    <ClInclude Include="take_name_object_test.hpp">
+      <Filter>pdfparser\stream_parser\take_object_test</Filter>
     </ClInclude>
-    <ClInclude Include="take_any_object_test%40eof_test.hpp">
-      <Filter>ヘッダー ファイル\stream_parser\take_any_object</Filter>
+    <ClInclude Include="take_null_object_test.hpp">
+      <Filter>pdfparser\stream_parser\take_object_test</Filter>
     </ClInclude>
-    <ClInclude Include="take_any_object_test%40unknown_test.hpp">
-      <Filter>ヘッダー ファイル\stream_parser\take_any_object</Filter>
+    <ClInclude Include="take_real_object_test.hpp">
+      <Filter>pdfparser\stream_parser\take_object_test</Filter>
+    </ClInclude>
+    <ClInclude Include="take_stream_object_test.hpp">
+      <Filter>pdfparser\stream_parser\take_object_test</Filter>
+    </ClInclude>
+    <ClInclude Include="take_object_test.hpp">
+      <Filter>pdfparser\stream_parser\take_object_test</Filter>
     </ClInclude>
     <ClInclude Include="literal_trim.hpp">
-      <Filter>ヘッダー ファイル</Filter>
+      <Filter>pdfparser_test</Filter>
+    </ClInclude>
+    <ClInclude Include="testtool.h">
+      <Filter>pdfparser_test</Filter>
+    </ClInclude>
+    <ClInclude Include="parser_test.hpp">
+      <Filter>pdfparser</Filter>
     </ClInclude>
     <ClInclude Include="attempt_test.hpp">
-      <Filter>ヘッダー ファイル\stream_parser</Filter>
+      <Filter>pdfparser\istream_extended</Filter>
     </ClInclude>
-    <ClInclude Include="take_footer_test.hpp">
-      <Filter>ヘッダー ファイル\stream_parser</Filter>
+    <ClInclude Include="ignore_if_present_test.hpp">
+      <Filter>pdfparser\istream_extended</Filter>
+    </ClInclude>
+    <ClInclude Include="seek_forward_head_of_line_test.hpp">
+      <Filter>pdfparser\istream_extended</Filter>
+    </ClInclude>
+    <ClInclude Include="seek_test.hpp">
+      <Filter>pdfparser\istream_extended</Filter>
+    </ClInclude>
+    <ClInclude Include="seek_to_end_test.hpp">
+      <Filter>pdfparser\istream_extended</Filter>
+    </ClInclude>
+    <ClInclude Include="tell_test.hpp">
+      <Filter>pdfparser\istream_extended</Filter>
+    </ClInclude>
+    <ClInclude Include="peek_test.hpp">
+      <Filter>pdfparser\istream_extended</Filter>
+    </ClInclude>
+    <ClInclude Include="eof_test.hpp">
+      <Filter>pdfparser\istream_extended</Filter>
+    </ClInclude>
+    <ClInclude Include="operator++_test.hpp">
+      <Filter>pdfparser\istream_extended</Filter>
+    </ClInclude>
+    <ClInclude Include="promise_test.hpp">
+      <Filter>pdfparser\istream_extended</Filter>
+    </ClInclude>
+    <ClInclude Include="attempt_token_test.hpp">
+      <Filter>pdfparser\tokenizer</Filter>
+    </ClInclude>
+    <ClInclude Include="promise_token_test.hpp">
+      <Filter>pdfparser\tokenizer</Filter>
+    </ClInclude>
+    <ClInclude Include="take_token_test.hpp">
+      <Filter>pdfparser\tokenizer</Filter>
+    </ClInclude>
+    <ClInclude Include="get_test.hpp">
+      <Filter>pdfparser\istream_extended</Filter>
+    </ClInclude>
+    <ClInclude Include="no_token.hpp">
+      <Filter>pdfparser\tokenizer</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="tests.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="parser_test.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="ignore_if_present_test.cpp">
-      <Filter>ソース ファイル\stream_parser</Filter>
-    </ClCompile>
-    <ClCompile Include="seek_forward_head_of_line_test.cpp">
-      <Filter>ソース ファイル\stream_parser</Filter>
-    </ClCompile>
-    <ClCompile Include="seek_test.cpp">
-      <Filter>ソース ファイル\stream_parser</Filter>
-    </ClCompile>
-    <ClCompile Include="seek_to_end_test.cpp">
-      <Filter>ソース ファイル\stream_parser</Filter>
-    </ClCompile>
     <ClCompile Include="take_indirect_object_test.cpp">
-      <Filter>ソース ファイル\stream_parser</Filter>
-    </ClCompile>
-    <ClCompile Include="take_signed_integer_test.cpp">
-      <Filter>ソース ファイル\stream_parser</Filter>
+      <Filter>pdfparser\stream_parser</Filter>
     </ClCompile>
     <ClCompile Include="take_trailer_test.cpp">
-      <Filter>ソース ファイル\stream_parser</Filter>
-    </ClCompile>
-    <ClCompile Include="take_unsigned_integer_test.cpp">
-      <Filter>ソース ファイル\stream_parser</Filter>
-    </ClCompile>
-    <ClCompile Include="take_xref_entry_test.cpp">
-      <Filter>ソース ファイル\stream_parser</Filter>
+      <Filter>pdfparser\stream_parser</Filter>
     </ClCompile>
     <ClCompile Include="take_xref_table_test.cpp">
-      <Filter>ソース ファイル\stream_parser</Filter>
+      <Filter>pdfparser\stream_parser</Filter>
     </ClCompile>
-    <ClCompile Include="tell_test.cpp">
-      <Filter>ソース ファイル\stream_parser</Filter>
+    <ClCompile Include="take_stream_object_test.cpp">
+      <Filter>pdfparser\stream_parser\take_object_test</Filter>
     </ClCompile>
-    <ClCompile Include="take_any_object_test%40stream_object_test.cpp">
-      <Filter>ソース ファイル\stream_parser\take_any_object_test</Filter>
+    <ClCompile Include="take_array_object_test.cpp">
+      <Filter>pdfparser\stream_parser\take_object_test</Filter>
     </ClCompile>
-    <ClCompile Include="take_any_object_test%40array_object_test.cpp">
-      <Filter>ソース ファイル\stream_parser\take_any_object_test</Filter>
+    <ClCompile Include="take_boolean_object_test.cpp">
+      <Filter>pdfparser\stream_parser\take_object_test</Filter>
     </ClCompile>
-    <ClCompile Include="take_any_object_test%40boolean_test.cpp">
-      <Filter>ソース ファイル\stream_parser\take_any_object_test</Filter>
+    <ClCompile Include="take_dictionary_object_test.cpp">
+      <Filter>pdfparser\stream_parser\take_object_test</Filter>
     </ClCompile>
-    <ClCompile Include="take_any_object_test%40dictionary_object_test.cpp">
-      <Filter>ソース ファイル\stream_parser\take_any_object_test</Filter>
+    <ClCompile Include="take_hexadecimal_string_test.cpp">
+      <Filter>pdfparser\stream_parser\take_object_test</Filter>
     </ClCompile>
-    <ClCompile Include="take_any_object_test%40hexadecimal_string_test.cpp">
-      <Filter>ソース ファイル\stream_parser\take_any_object_test</Filter>
+    <ClCompile Include="take_indirect_reference_test.cpp">
+      <Filter>pdfparser\stream_parser\take_object_test</Filter>
     </ClCompile>
-    <ClCompile Include="take_any_object_test%40indirect_reference_test.cpp">
-      <Filter>ソース ファイル\stream_parser\take_any_object_test</Filter>
+    <ClCompile Include="take_integer_object_test.cpp">
+      <Filter>pdfparser\stream_parser\take_object_test</Filter>
     </ClCompile>
-    <ClCompile Include="take_any_object_test%40integer_object_test.cpp">
-      <Filter>ソース ファイル\stream_parser\take_any_object_test</Filter>
+    <ClCompile Include="take_literal_string_test.cpp">
+      <Filter>pdfparser\stream_parser\take_object_test</Filter>
     </ClCompile>
-    <ClCompile Include="take_any_object_test%40literal_string_test.cpp">
-      <Filter>ソース ファイル\stream_parser\take_any_object_test</Filter>
+    <ClCompile Include="take_name_object_test.cpp">
+      <Filter>pdfparser\stream_parser\take_object_test</Filter>
     </ClCompile>
-    <ClCompile Include="take_any_object_test%40name_object_test.cpp">
-      <Filter>ソース ファイル\stream_parser\take_any_object_test</Filter>
+    <ClCompile Include="take_null_object_test.cpp">
+      <Filter>pdfparser\stream_parser\take_object_test</Filter>
     </ClCompile>
-    <ClCompile Include="take_any_object_test%40null_object_test.cpp">
-      <Filter>ソース ファイル\stream_parser\take_any_object_test</Filter>
+    <ClCompile Include="take_real_object_test.cpp">
+      <Filter>pdfparser\stream_parser\take_object_test</Filter>
     </ClCompile>
-    <ClCompile Include="take_any_object_test%40real_object_test.cpp">
-      <Filter>ソース ファイル\stream_parser\take_any_object_test</Filter>
-    </ClCompile>
-    <ClCompile Include="take_any_object_test%40eof_test.cpp">
-      <Filter>ソース ファイル\stream_parser\take_any_object_test</Filter>
-    </ClCompile>
-    <ClCompile Include="take_any_object_test%40unknown_test.cpp">
-      <Filter>ソース ファイル\stream_parser\take_any_object_test</Filter>
-    </ClCompile>
-    <ClCompile Include="literal_trim.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="attempt_test.cpp">
-      <Filter>ソース ファイル\stream_parser</Filter>
+    <ClCompile Include="take_object_test.cpp">
+      <Filter>pdfparser\stream_parser\take_object_test</Filter>
     </ClCompile>
     <ClCompile Include="take_footer_test.cpp">
-      <Filter>ソース ファイル\stream_parser</Filter>
+      <Filter>pdfparser\stream_parser</Filter>
+    </ClCompile>
+    <ClCompile Include="parser_test.cpp">
+      <Filter>pdfparser</Filter>
+    </ClCompile>
+    <ClCompile Include="literal_trim.cpp">
+      <Filter>pdfparser_test</Filter>
+    </ClCompile>
+    <ClCompile Include="tests.cpp">
+      <Filter>pdfparser_test</Filter>
+    </ClCompile>
+    <ClCompile Include="attempt_test.cpp">
+      <Filter>pdfparser\istream_extended</Filter>
+    </ClCompile>
+    <ClCompile Include="ignore_if_present_test.cpp">
+      <Filter>pdfparser\istream_extended</Filter>
+    </ClCompile>
+    <ClCompile Include="seek_forward_head_of_line_test.cpp">
+      <Filter>pdfparser\istream_extended</Filter>
+    </ClCompile>
+    <ClCompile Include="seek_test.cpp">
+      <Filter>pdfparser\istream_extended</Filter>
+    </ClCompile>
+    <ClCompile Include="seek_to_end_test.cpp">
+      <Filter>pdfparser\istream_extended</Filter>
+    </ClCompile>
+    <ClCompile Include="tell_test.cpp">
+      <Filter>pdfparser\istream_extended</Filter>
+    </ClCompile>
+    <ClCompile Include="eof_test.cpp">
+      <Filter>pdfparser\istream_extended</Filter>
+    </ClCompile>
+    <ClCompile Include="peek_test.cpp">
+      <Filter>pdfparser\istream_extended</Filter>
+    </ClCompile>
+    <ClCompile Include="attempt_token_test.cpp">
+      <Filter>pdfparser\tokenizer</Filter>
+    </ClCompile>
+    <ClCompile Include="promise_token_test.cpp">
+      <Filter>pdfparser\tokenizer</Filter>
+    </ClCompile>
+    <ClCompile Include="take_token_test.cpp">
+      <Filter>pdfparser\tokenizer</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
